# BetterTkinterWidgets

./: .gitignore  README.md  setup.cfg
better_widgets/: widgets.py
src/better_widgets/: __init__.py  widgets.py
tests/: widgets_test.py
