[metadata]
name = better_widgets
version = 0.1.1
author = Bernardo Tonasse
author_email = btonasse@gmail.com
description = Subclasses of tkinter widgets to make this library a bit more hassle-free when starting a new GUI project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/btonasse/BetterTkinterWidgets
project_urls =
    Bug Tracker = https://github.com/btonasse/BetterTkinterWidgets/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src